# xet-core-dart

./: CHANGELOG.md  Cargo.toml  flutter_rust_bridge.yaml  pubspec.yaml  update_cargokit.sh  update_xet_core.sh
.github/: CODEOWNERS
.github/workflows/: precompile_binaries.yaml
android/: build.gradle
cargokit/build_tool/lib/src/: target.dart
cargokit/gradle/: plugin.gradle
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/runner/: Runner.rc  main.cpp
hf_xet_dart/: README.md  pubspec.yaml
hf_xet_dart/android/: settings.gradle
hf_xet_dart/android/src/main/: AndroidManifest.xml
hf_xet_dart/example/: README.md  pubspec.yaml
hf_xet_dart/example/android/app/: build.gradle.kts
hf_xet_dart/example/integration_test/: hf_xet_test.dart
hf_xet_dart/example/ios/Runner/: Info.plist
hf_xet_dart/example/macos/Runner/: DebugProfile.entitlements
hf_xet_dart/example/macos/Runner.xcodeproj/: project.pbxproj
hf_xet_dart/example/windows/: CMakeLists.txt
hf_xet_dart/example/windows/flutter/: generated_plugins.cmake
hf_xet_dart/ios/: hf_xet.podspec
hf_xet_dart/lib/: hf_xet.dart
hf_xet_dart/lib/src/rust/: api.dart  api.freezed.dart  api.g.dart  frb_generated.dart  frb_generated.io.dart  (+1 more)
hf_xet_dart/linux/: CMakeLists.txt
hf_xet_dart/macos/: hf_xet.podspec
hf_xet_dart/rust/: Cargo.toml
hf_xet_dart/rust/src/: frb_generated.rs
hf_xet_dart/rust/src/api/: logging.rs  mod.rs  progress_update.rs  token_refresh.rs
ios/: hf_xet.podspec
lib/: hf_xet.dart
lib/src/rust/: api.dart  frb_generated.io.dart
macos/: hf_xet.podspec
rust/: Cargo.toml  README.md  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: dart.rs  logging.rs  mod.rs  progress_update.rs  runtime.rs  token_refresh.rs
windows/: CMakeLists.txt
xet-core/: README.md
(+11 files in other folders)
