[package]
name = "hf_xet"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

cas_client = { path = "../../cas_client" }
data = { path = "../../data" }
error_printer = { path = "../../error_printer" }
progress_tracking = { path = "../../progress_tracking" }
utils = { path = "../../utils" }
xet_runtime = { path = "../../xet_runtime" }

async-trait = "0.1"
bipbuffer = "0.1"
chrono = "0.4"
itertools = "0.14"
lazy_static = "1.5"
pprof = { version = "0.14", features = [
    "flamegraph",
    "prost",
    "protobuf-codec",
], optional = true }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "tracing-log",
    "env-filter",
    "registry",
] }
tracing-appender = "0.2"

console-subscriber = { version = "0.4.1", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[features]
native-tls = ["cas_client/native-tls-vendored"]
native-tls-vendored = ["cas_client/native-tls-vendored"]
profiling = ["pprof"]
tokio-console = ["dep:console-subscriber"]

[profile.release]
split-debuginfo = "packed"
opt-level = "s"
lto = true
codegen-units = 1

# on manylinux and macos maturin + split-debuginfo doesn't output debug symbols for .so objects,
# so we need a different profile to build. For mac, the below settings will output a .dSYM
# file. For Linux, we are stripping them manually using binutils.
[profile.release-dbgsymbols]
inherits = "release"
debug = true
split-debuginfo = "none"


[profile.opt-test]
inherits = "dev"
debug = true
opt-level = 3
